name:                fixer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/fixer#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Web.Fixer.Api.Client
  build-depends:       base >= 4.7 && < 5,
                       aeson,
                       mtl,
                       lens-aeson,
                       lens,
                       text,
                       bytestring,
                       wreq

executable fixer-server
  hs-source-dirs:      exec
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       scotty,
                       mtl,
                       aeson,
                       text,
                       fixer
  
